crates/alder-solve/tests/snapshots/inference__try_rejects_a_tag_missing_from_the_closed_result_row.snap
---
source: crates/alder-solve/tests/inference.rs
description: "fn read() Result[Number, [:storage]] {\n    Err(:storage)\n}\n\nfn load() Result[Number, [:invalid]] {\n    read()?\n}\n"
---
[
    Error {
        region: Region {
            start: Position {
                line: 6,
                column: 5,
            },
            end: Position {
                line: 6,
                column: 12,
            },
        },
        kind: Mismatch {
            actual: ErrorRow(
                [
                    (
                        "storage",
                        [],
                    ),
                ],
                None,
            ),
            expected: ErrorRow(
                [
                    (
                        "invalid",
                        [],
                    ),
                ],
                None,
            ),
        },
        expectation: Some(
            Expectation {
                kind: Propagation,
                origin: None,
            },
        ),
    },
]
