crates/alder-solve/tests/snapshots/inference__tuple_pattern_arg.snap
---
source: crates/alder-solve/tests/inference.rs
description: "Code:\n\nmodule Main exposing (swap)\n\nswap ( a, b ) = ( b, a )\n"
---
swap : forall a b. ( a, b ) -> ( b, a )
