crates/alder-solve/tests/snapshots/inference__tuple_projections_infer_at_least_two_elements.snap
---
source: crates/alder-solve/tests/inference.rs
description: "fn first(value) { value.0 }"
---
first: forall a, b. fn(a) b where tuple a length 2 {0: b}
