crates/alder-solve/tests/snapshots/inference__tuple_projections_reverse_order_has_same_contract.snap
---
source: crates/alder-solve/tests/inference.rs
description: "fn sum(pair) Number { pair.1 + pair.0 }\nfn run() Number { sum((20, 22)) }\n"
---
run: fn() Number
sum: forall a. fn(a) Number where tuple a length 2 {0: Number, 1: Number}
